--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start":"http-server . -o",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
