--- a/bower.json
+++ b/bower.json
@@ -17,26 +17,12 @@
   ],
   "dependencies": {
     "angular-bootstrap": "^2.1.3",
-    "angular-recaptcha": "~2.2.4",
-    "angular-flexslider": "~1.3.2",
-    "angular-animate": "^1.5.8",
-    "animate.css": "^3.5.2",
-    "bourbon": "^4.2.7",
-    "angular-sanitize": "^1.5.8",
-    "font-awesome": "^4.6.3",
     "lodash": "^4.16.0",
     "angular": "^1.5.8",
-    "fancyBox": "^2.1.5",
-    "angulartics-google-analytics": "^0.2.1",
-    "angular-swiper": "^0.4.0",
-    "smart-app-banner": "^1.3.0",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "v4.0.0",
-    "tether": "^1.4.3"
+    "bootstrap": "v4.0.0"
   },
-  "devDependencies": {
-    "angular-translate": "^2.12.1"
-  },
+  "devDependencies": {},
   "resolutions": {
     "angular": "1.7.8"
   }
